[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/pixeltype.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Menu/settings_shine.png" type="Texture" id=2]
[ext_resource path="res://UI/Menu/resume_pressed.png" type="Texture" id=3]
[ext_resource path="res://UI/Menu/resume_shine.png" type="Texture" id=4]
[ext_resource path="res://UI/Menu/exit_shine.png" type="Texture" id=5]
[ext_resource path="res://UI/Menu/exit.png" type="Texture" id=6]
[ext_resource path="res://UI/Menu/resume.png" type="Texture" id=7]
[ext_resource path="res://UI/Menu/exit_pressed.png" type="Texture" id=8]
[ext_resource path="res://UI/Menu/settings.png" type="Texture" id=9]
[ext_resource path="res://UI/Menu/settings_pressed.png" type="Texture" id=10]
[ext_resource path="res://UI/Menu/bitmask.bmp" type="BitMap" id=11]
[ext_resource path="res://UI/PauseScreen.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.321569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 2, 2 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 227.0
margin_top = 102.0
margin_right = 413.0
margin_bottom = 258.0
custom_constants/separation = 28

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 186.0
margin_bottom = 156.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 60.0
margin_right = 125.0
margin_bottom = 98.0
custom_constants/separation = 10

[node name="ResumeButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_click_mask = ExtResource( 11 )

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 65.0
margin_bottom = 62.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 2 )
texture_click_mask = ExtResource( 11 )

[node name="ExitButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 65.0
margin_bottom = 98.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
texture_click_mask = ExtResource( 11 )

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
